--- a/firstPage.html
+++ b/firstPage.html
@@ -1,61 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <style>
     body {
-      background-image: url('https://cdn.pixabay.com/photo/2016/03/26/22/21/books-1281581_1280.jpg');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: 100% 100%;
+        background-image: url('https://cdn.pixabay.com/photo/2016/03/26/22/21/books-1281581_1280.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+        font-family: 'Tangerine', serif;
+        font-size: 15px;
     }
-    </style>
+
+.row{
+  margin: 0, auto;
+}
+
+    .card {
+        margin: 20px;
+    }
+
+    .input{
+      text-align: center;
+    }
+
+</style>
 
 <body>
 
     <div class="jumbotron jumbotron-fluid bg-warning">
         <div class="container">
-          <h1 class="display-4">ROUND TABLE</h1>
-          <p class="lead">WELCOME TO ROUND TABLE TO SEARCH BOOK'S COMMENTS</p>
-        </div>
-      </div>
-
-
-    <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Type Book Title" aria-label="Recipient's username" aria-describedby="button-addon2">
-        <div class="input-group-append">
-        <button class="btn btn-outline-secondary bg-primary text-white" type="button" id="button-addon2">Search</button>
+            <h1 class="display-4 text-bold">ROUND TABLE</h1>
+            <p class="lead">WELCOME TO ROUND TABLE TO SEARCH BOOK'S COMMENTS</p>
         </div>
     </div>
 
 
-    <div class="card" style="width: 20rem;">
-        <img src="https://upload.wikimedia.org/wikipedia/en/0/09/Becoming_%28Michelle_Obama_book%29.jpg" class="card-img-top" alt="BECOMING">
-        <div class="card-body">
-          <h5 class="card-title">BECOMING</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="" class="btn btn-primary">Add Comment</a>
+
+
+    <div class="container">
+
+
+      <div class="input-group mb-3" style= " margin-bottom: 20px;">
+        <input type="text" class="form-control" placeholder="Type Book Title" aria-label="Recipient's username"
+            aria-describedby="button-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary bg-primary text-white" type="button"
+                id="button-addon2">Search</button>
         </div>
-      </div> 
+    </div>
 
+        <div class="row mb-4">
+            <div class="card col-sm-3" style=" height: 650px;">
+                <img src="https://upload.wikimedia.org/wikipedia/en/0/09/Becoming_%28Michelle_Obama_book%29.jpg"
+                    class="card-img-top" height="450px" alt="BECOMING">
+                <div class="card-body">
+                    <h5 class="card-title">BECOMING</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="" class="btn btn-primary">Add Comment</a>
+                </div>
+            </div>
 
- <div class="card" style="width: 20rem;">
-        <img src="https://upload.wikimedia.org/wikipedia/en/0/09/Becoming_%28Michelle_Obama_book%29.jpg" class="card-img-top" alt="BECOMING">
-        <div class="card-body">
-          <h5 class="card-title">BECOMING</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="" class="btn btn-primary">Add Comment</a>
+            <div class="card col-sm-3" style=" height: 650px;">
+              <img src="https://images-na.ssl-images-amazon.com/images/I/81iqZ2HHD-L.jpg"
+                  class="card-img-top" height="450px" alt="BECOMING">
+              <div class="card-body">
+                  <h5 class="card-title">Harry Potter</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="" class="btn btn-primary">Add Comment</a>
+              </div>
+          </div>
+
+          <div class="card col-sm-3" style=" height: 650px;">
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Crazy_Rich_Asians_poster.png/220px-Crazy_Rich_Asians_poster.png"
+                class="card-img-top" height="450px" alt="BECOMING">
+            <div class="card-body">
+                <h5 class="card-title">Crazy Rich Asian</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="" class="btn btn-primary">Add Comment</a>
+            </div>
         </div>
-      </div> <br>
+
+        </div>
 
 
 
 
+        <div class="row">
       
+          <div class="row mb-4 ml-5">
+            <div class="card col-sm-3" style=" height: 650px;">
+                <img src="https://upload.wikimedia.org/wikipedia/en/0/09/Becoming_%28Michelle_Obama_book%29.jpg"
+                    class="card-img-top" height="450px" alt="BECOMING">
+                <div class="card-body">
+                    <h5 class="card-title">BECOMING</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="" class="btn btn-primary">Add Comment</a>
+                </div>
+            </div>
+
+            <div class="card col-sm-3" style=" height: 650px;">
+              <img src="https://upload.wikimedia.org/wikipedia/en/0/09/Becoming_%28Michelle_Obama_book%29.jpg"
+                  class="card-img-top" height="450px" alt="BECOMING">
+              <div class="card-body">
+                  <h5 class="card-title">BECOMING</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="" class="btn btn-primary">Add Comment</a>
+              </div>
+          </div>
+
+          <div class="card col-sm-3" style=" height: 650px;">
+            <img src="https://upload.wikimedia.org/wikipedia/en/0/09/Becoming_%28Michelle_Obama_book%29.jpg"
+                class="card-img-top" height="450px" alt="BECOMING">
+            <div class="card-body">
+                <h5 class="card-title">BECOMING</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="" class="btn btn-primary">Add Comment</a>
+            </div>
+        </div>
+
+
+
+
+        </div>
+
+    </div>
+
 </body>
+
 </html>
